--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@deskthing/client": "latest",
-    "@deskthing/server": "latest",
+    "@deskthing/client": "^0.11.1",
     "autoprefixer": "^10.4.21",
+    "node-wav-player": "^1.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sound-play": "^1.1.0"
   },
   "devDependencies": {
-    "@deskthing/types": "latest",
+    "@deskthing/cli": "^0.11.7",
+    "@deskthing/client": "^0.11.1",
+    "@deskthing/server": "^0.11.6",
+    "@deskthing/types": "^0.11.18",
     "@eslint/js": "^9.9.0",
     "@types/node": "^22.10.7",
+    "@types/play-sound": "^1.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sound-play": "^1.1.3",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.1",
     "esbuild": "^0.19.2",
